<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EQuicam App</string>
    <string name="app_short_name">EQuicam App</string>
    <string name="app_about_title">Over</string>
    <string name="action_settings">Instellingen</string>
    <string name="StartRecord">Opnemen</string>
    <string name="Connect">Verbinden</string>
    <string name="instellingenMenuString">Instellingen</string>
    <string name="StopOpnameString">Stop Opname</string>
    <string name="StartOpnameString">Start Opname</string>
    <string name="OpnameGestartString">"Opname gestart"</string>
    <string name="OpnameGestoptString">"Opname gestopt"</string>
    <string name="GeenVerbindingString">Tik om te verbinden</string>
    <string name="VerbindenString">Verbinden</string>
    <string name="Slechts2MinutenOpnameString">U kunt slechts 2 minuten opnemen.</string>
    <string name="MaakVerbindingString">Tik om te verbinden</string>
    <string name="OpnieuwVerbindingMaken">Aan het verbinden...</string>
    <string name="ClipsTitleStr">Clips</string>
    <string name="ClipsMenuBtnString">Clips</string>
    <string name="liveMenuBtnString">Live</string>
    <string name="fullScreenVideoPlNameStr">FullScreenVideoPlayer</string>
    <string name="lengteNietBeschikbaarStr">Lengte niet beschikbaar</string>
    <string name="drawerOpenStr">Drawer is nu open</string>
    <string name="drawerDichtStr">Drawer is nu dicht</string>
    <string name="hoofdMenuStr">Hoofdmenu</string>
    <string name="camerasTitleStr">Camera</string>
    <string name="videoPoortTVStr">Videopoort:</string>
    <string name="urlHintStr">Bijvoorbeeld: equicam.noip.me</string>
    <string name="urlTVstr">Camera URL:</string>
    <string name="poortHintStr">Bijvoorbeeld: 554</string>
    <string name="gebruikersnaamTVstr">Gebruikersnaam:</string>
    <string name="gebruikersnaamHintStr">Bijvoorbeeld: Admin</string>
    <string name="wachtWoordTVstr">Wachtwoord:</string>
    <string name="wwHintStr">******</string>
    <string name="opslaanBtnStr">Opslaan</string>
    <string name="liveDrawerStr">Live</string>
    <string name="clipsDrawerStr">Clips</string>
    <string name="cameraDrawerStr">Camera</string>
    <string name="videoNietAanwezigStr">Video is beschadigd.</string>
    <string name="SalineroHarcodedStr">Salinero</string>
    <string name="datumHardcodedStr">Datum</string>
    <string name="tijdHardcodedStr">Tijd</string>
    <string name="afspeelduurHardcodedStr">Duratie</string>
    <string name="geenClipsStr">Er zijn momenteel nog geen clips beschikbaar. Ga terug naar het Live scherm om opnames te maken.</string>
    <string name="geenClipsOmWeerTeGevenStr">Er zijn nog geen clips om weer te geven.</string>
    <string name="stopEerstOpnameStr">Stop eerst de opname.</string>

</resources>