<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:weightSum="1"
    android:padding="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="fill_horizontal|bottom"
            android:layout_margin="1dp"
            android:baselineAligned="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/urlTVstr"
                    android:id="@+id/textView2"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:layout_weight="0.8" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cameraURLeditText"
                    android:hint="@string/urlHintStr"
                    android:textSize="12sp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:inputType="text"
                    android:maxLines="2"
                    android:maxLength="50"
                    android:layout_weight="0.2"
                    android:maxWidth="180dp"
                    android:minWidth="180dp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:baselineAligned="true"
            android:gravity="fill_horizontal|bottom"
            android:layout_margin="1dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/videoPoortTVStr"
                    android:id="@+id/textView3"
                    android:textSize="15sp"
                    android:layout_weight="0.8"
                    android:minWidth="0dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/poortEditText"
                    android:gravity="right"
                    android:hint="@string/poortHintStr"
                    android:textSize="12sp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="5"
                    android:layout_weight="0.2"
                    android:minWidth="180dp"
                    android:maxWidth="180dp" />
            </LinearLayout>
        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Indien van toepassing"
            android:id="@+id/textView7"
            android:layout_marginTop="30dp"
            android:textStyle="bold|italic"
            android:textSize="15dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:baselineAligned="true"
        android:gravity="fill_horizontal|bottom"
        android:layout_margin="1dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gebruikersnaamTVstr"
                android:id="@+id/textView4"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:layout_weight="0.8" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gebruikersNaamET"
                android:gravity="right"
                android:hint="@string/gebruikersnaamHintStr"
                android:textSize="12sp"
                android:singleLine="true"
                android:maxLength="20"
                android:maxLines="1"
                android:inputType="text"
                android:layout_weight="0.2"
                android:minWidth="180dp"
                android:maxWidth="180dp" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:baselineAligned="true"
        android:gravity="fill_horizontal|bottom"
        android:layout_margin="1dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wachtWoordTVstr"
                android:id="@+id/textView5"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:layout_weight="0.8" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wwET"
                android:editable="false"
                android:gravity="right"
                android:hint="@string/wwHintStr"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                android:maxLength="20"
                android:layout_weight="0.2"
                android:minWidth="180dp"
                android:maxWidth="180dp" />
        </LinearLayout>
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opslaanBtnStr"
            android:id="@+id/camerasSubmitBtn"
            android:layout_gravity="right"
            android:padding="10dp"
            android:textSize="15sp"
            android:onClick="onSubmit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="80dp" />

    </RelativeLayout>
</LinearLayout>
